--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -59,6 +59,9 @@
   }
   p {
     margin: 1rem 0;
+    @media screen and (min-width: 1568px) {
+      padding: 0 10rem;
+    }
   }
 
   iframe {
@@ -110,6 +113,11 @@
     justify-content: space-evenly;
     padding: 5rem;
   }
+  h2 {
+    @media screen and (min-width: 1568px) {
+      padding: 0 5rem;
+    }
+  }
   h4 {
     @media screen and (min-width: 768px) {
       line-height: 3rem;
@@ -131,6 +139,11 @@
       line-height: 5rem;
     }
   }
+  .icon {
+    @media screen and (min-width: 1568px) {
+      margin: 2rem 0;
+    }
+  }
   h6 {
     @media screen and (min-width: 768px) {
       font-size: 2rem;
@@ -143,7 +156,7 @@
   p {
     @media screen and (min-width: 1568px) {
       font-size: 2rem;
-      padding: 0 4rem;
+      padding: 0 10rem;
     }
   }
 }
@@ -238,6 +251,9 @@
 
     p {
       padding: 3rem 5rem;
+      @media screen and (min-width: 1568px) {
+        padding: 3rem 15rem;
+      }
     }
   }
 }
