--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -5,6 +5,10 @@
   flex-flow: column;
   height: 450px;
   background: #1dd3b0;
+  background-image: url('../images/sky.webp');
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover;
   @media screen and (min-width: 1586px) {
     background-image: url('../images/houston.webp');
     background-position: center; /* Center the image */
