--- a/src/styles/navlinks.css
+++ b/src/styles/navlinks.css
@@ -1,30 +1,34 @@
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-flow: row wrap;
-  background-color: #2e2e2e;
-}
-nav .links {
+.navlinks {
   display: none;
-  clip-path: circle(100px at 90% -10%);
-  transition: all 1s ease-out;
 }
-nav .links.open {
+.open {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  height: 100vh;
   flex-flow: column;
-  clip-path: circle(200% at 90% -10%);
-  color: whitesmoke;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  background-color: whitesmoke;
+  z-index: 9999;
 }
-nav .links.open .link {
+.open .navlink {
+  color: #552931;
   text-decoration: none;
+  cursor: pointer;
 }
-nav .links.open .link h1 {
-  color: whitesmoke;
+.nav-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
-nav .icon {
-  color: whitesmoke;
+@media screen and (min-width: 1058px) {
+  .nav-icon {
+    padding: 20px 20px 0 0;
+  }
+}
+@media screen and (min-width: 1058px) {
+  .logo {
+    padding: 20px 0 0 20px;
+  }
 }
