--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -6,7 +6,7 @@
   background-color: #212121;
   color: whitesmoke;
   padding: 3rem;
-  height: 100vh;
+  height: 100%;
 }
 .footer h1 {
   border-bottom: 1px solid whitesmoke;
@@ -25,6 +25,7 @@
   justify-content: center;
   align-items: center;
   flex-flow: column;
+  height: 100%;
 }
 @media screen and (min-width: 768px) {
   .footer .addresses {
@@ -35,7 +36,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-flow: column wrap;
+  flex-flow: column;
 }
 @media screen and (min-width: 768px) {
   .footer .addresses address {
@@ -55,6 +56,7 @@
   justify-content: center;
   align-items: center;
   flex-flow: column wrap;
+  height: 100%;
 }
 .footer .follow-us h1 {
   margin-top: 1rem;
