--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -6,7 +6,7 @@
   background-color: #212121;
   color: whitesmoke;
   padding: 3rem;
-  height: 100vh;
+  height: 100%;
 
   h1 {
     border-bottom: 1px solid whitesmoke;
@@ -23,6 +23,7 @@
     justify-content: center;
     align-items: center;
     flex-flow: column;
+    height: 100%;
     @media screen and (min-width: 768px) {
       flex-flow: row wrap;
     }
@@ -30,7 +31,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      flex-flow: column wrap;
+      flex-flow: column;
       @media screen and (min-width: 768px) {
         margin: 2rem 4rem;
       }
@@ -50,6 +51,7 @@
     justify-content: center;
     align-items: center;
     flex-flow: column wrap;
+    height: 100%;
     h1 {
       margin-top: 1rem;
       @media screen and (min-width: 1568px) {
