added basic carousel, needs images styled

--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -224,7 +224,8 @@
     justify-content: center;
     align-items: center;
     flex-flow: column;
-    margin: 1rem 0;
+    height: 100%;
+    width: 100vw;
     @media screen and (min-width: 1568px) {
       flex-flow: row wrap;
     }
