--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -265,7 +265,8 @@
   justify-content: center;
   align-items: center;
   flex-flow: column;
-  margin: 1rem 0;
+  height: 100%;
+  width: 100vw;
 }
 @media screen and (min-width: 1568px) {
   .third-white-info .images {
