resized carousel for mobile and desktop

--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -1,3 +1,8 @@
-.carousel {
-  height: 100vh;
+.carousel img {
+  height: 60vh;
+}
+@media screen and (min-width: 1058px) {
+  .carousel img {
+    height: 100vh;
+  }
 }
