--- a/src/styles/carousel.less
+++ b/src/styles/carousel.less
@@ -1,3 +1,8 @@
 .carousel {
-  height: 100vh;
+  img {
+    height: 60vh;
+    @media screen and (min-width: 1058px) {
+      height: 100vh;
+    }
+  }
 }
