--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -223,14 +223,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-flow: column;
-    height: 100%;
     width: 100vw;
+    height: 90vh;
     @media screen and (min-width: 1568px) {
       flex-flow: row wrap;
+      height: 100%;
+      width: 80%;
     }
     .photo {
-      margin: 1rem 0;
       @media screen and (min-width: 1568px) {
         margin: 1rem;
       }
