--- a/src/styles/carousel.less
+++ b/src/styles/carousel.less
@@ -1,8 +1,16 @@
 .carousel {
   img {
-    height: 60vh;
+    height: 45vh;
+    width: auto;
     @media screen and (min-width: 1058px) {
       height: 100vh;
+      width: auto;
     }
+  }
+}
+.rec.rec-arrow {
+  display: none;
+  @media screen and (min-width: 1058px) {
+    visibility: visible;
   }
 }
