fixed arrows not displaying on desktop

--- a/src/styles/carousel.less
+++ b/src/styles/carousel.less
@@ -11,6 +11,6 @@
 .rec.rec-arrow {
   display: none;
   @media screen and (min-width: 1058px) {
-    visibility: visible;
+    display: inline-block;
   }
 }
